@@ -1,3 +1,7 @@
+2024-12-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-local-file-name): New defun.
+
 2024-12-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-format-spec): New defun.
